--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+	<div id="appLauncher">
+
+	</div>
+
 	<div id="background">
 
 		<div id="selectBox"></div>
@@ -88,6 +92,7 @@
 	<script src="scripts/javascript.js"></script>
 	<script src="scripts/functions.js"></script>
 	<script src="scripts/functionsGrid.js"></script>
+	<script src="scripts/functionsTasks.js"></script>
 	<script src="scripts/functionsIcons.js"></script>
 	<script src="scripts/functionsWindows.js"></script>
 	<script src="scripts/oContextMenu.js"></script>
