--- a/index.html
+++ b/index.html
@@ -19,55 +19,7 @@
 
 		<div id="selectBox"></div>
 
-		<div id="iconContextMenu" class="clickContext">
-
-			<div class="contextMenu">
-				<div id="iconCM1" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/open.svg');"></div><span>Open</span>
-					<input type="radio" name="openCheck" class="cmcheck" id="openCheck">
-				</div>
-				<div id="iconCM2" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/maximize.svg');"></div><span>Open maximized</span>
-					<input type="radio" name="openCheck" class="cmcheck" id="maxiCheck">
-				</div>
-				<div id="iconCM3" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/newtab.svg');"></div><span>Open in new tab</span>
-					<input type="radio" name="openCheck" class="cmcheck" id="newtCheck">
-				</div>
-			</div>
-	
-			<div class="contextMenu">
-				<div id="iconCM4" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/cut.svg');"></div><span>Cut</span></div>
-				<div id="iconCM5" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/copy.svg');"></div><span>Copy</span></div>
-				<div id="iconCM6" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/paste.svg');"></div><span>Paste</span></div>
-			</div>
-	
-			<div class="contextMenu">
-				<div id="iconCM7" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/delete.svg');"></div><span>Delete</span></div>
-				<div id="iconCM8" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/rename.svg');"></div><span>Rename</span></div>
-				<div id="iconCM9" class="iMenuOption"><div style="background-image: url('assets/svg/contextMenu/properties.svg');"></div><span>Properties</span></div>
-			</div>
-	
-			<div class="contextMenu"></div>
-	
-		</div>
-
-		<div id="deskContextMenu" class="clickContext">
-
-			<div class="contextMenu">
-				<div id="deskCM1" class="dMenuOption"><span>Icons</span></div>
-				<div id="deskCM2" class="dMenuOption"><span>New</span></div>
-			</div>
-	
-			<div class="contextMenu">
-				<div id="deskCM3" class="dMenuOption"><span>Paste</span></div>
-			</div>
-	
-			<div class="contextMenu">
-				<div id="deskCM4" class="dMenuOption"><span>Settings</span></div>
-				<div id="deskCM5" class="dMenuOption"><span>Info</span></div>
-			</div>
-
-			<div class="contextMenu"></div>
-
-		</div>
+		<div id="dropContextMenu" class="clickContext"></div>
 
 		<div id="gridLayer">
 		</div>
@@ -90,13 +42,16 @@
 	<script src="scripts/config.js"></script>
 	<script src="scripts/touch.js"></script>
 	<script src="scripts/javascript.js"></script>
+	
+	<script src="scripts/objects.js"></script>
+	
 	<script src="scripts/functions.js"></script>
+	<script src="scripts/functionsMenu.js"></script>
 	<script src="scripts/functionsGrid.js"></script>
 	<script src="scripts/functionsTasks.js"></script>
 	<script src="scripts/functionsIcons.js"></script>
 	<script src="scripts/functionsWindows.js"></script>
-	<script src="scripts/oContextMenu.js"></script>
-	<script src="scripts/objects.js"></script>
+	<script src="scripts/functionsDirectories.js"></script>
     
 </body>
 </html>
